# coach-scribe

./: CLAUDE.md
scribe-api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  worker.py
scribe-api/app/: main.py
scribe-api/app/api/routes/: jobs.py  process.py
scribe-api/app/core/: config.py  queue.py  security.py  temp_files.py
scribe-api/app/schemas/: jobs.py  requests.py
scribe-api/app/services/: diarization.py  extraction.py  transcription.py
scribe-api/tests/: conftest.py  test_queue.py  test_routes_jobs.py  test_routes_process.py  test_schemas.py  test_services_diarization.py  test_services_extraction.py  test_services_transcription.py  test_temp_files.py
